@@ -1,0 +1,83 @@
+from kiwi.ui.test.player import Player
+
+player = Player(['examples/framework/diary/diary2.py'])
+app = player.get_app()
+
+player.wait_for_window("Diary")
+app.Diary.add.clicked()
+app.Diary.title.set_text("Untitled")
+app.Diary.ObjectList.select_paths(['0'])
+app.Diary.title.set_text("")
+app.Diary.title.set_text("F")
+app.Diary.title.set_text("Fi")
+app.Diary.title.set_text("Fir")
+app.Diary.title.set_text("Firs")
+app.Diary.title.set_text("First")
+app.Diary.add.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("Untitled")
+app.Diary.ObjectList.select_paths(['1'])
+app.Diary.title.set_text("")
+app.Diary.title.set_text("S")
+app.Diary.title.set_text("Se")
+app.Diary.title.set_text("Sec")
+app.Diary.title.set_text("Seco")
+app.Diary.title.set_text("Secon")
+app.Diary.title.set_text("Second")
+app.Diary.period.clicked()
+app.Diary.afternoon.clicked()
+app.Diary.add.clicked()
+app.Diary.afternoon.clicked()
+app.Diary.period.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("Untitled")
+app.Diary.ObjectList.select_paths(['2'])
+app.Diary.title.set_text("")
+app.Diary.title.set_text("T")
+app.Diary.title.set_text("Th")
+app.Diary.title.set_text("Thi")
+app.Diary.title.set_text("Thir")
+app.Diary.title.set_text("Third")
+app.Diary.period.clicked()
+app.Diary.evening.clicked()
+app.Diary.evening.clicked()
+app.Diary.afternoon.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("Second")
+app.Diary.ObjectList.select_paths(['1'])
+app.Diary.afternoon.clicked()
+app.Diary.period.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("First")
+app.Diary.ObjectList.select_paths(['0'])
+app.Diary.period.clicked()
+app.Diary.afternoon.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("Second")
+app.Diary.ObjectList.select_paths(['1'])
+app.Diary.afternoon.clicked()
+app.Diary.evening.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("Third")
+app.Diary.ObjectList.select_paths(['2'])
+app.Diary.remove.clicked()
+app.Diary.ObjectList.select_paths([])
+app.Diary.evening.clicked()
+app.Diary.afternoon.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("Second")
+app.Diary.ObjectList.select_paths(['1'])
+app.Diary.remove.clicked()
+app.Diary.ObjectList.select_paths([])
+app.Diary.afternoon.clicked()
+app.Diary.period.clicked()
+app.Diary.title.set_text("")
+app.Diary.title.set_text("First")
+app.Diary.ObjectList.select_paths(['0'])
+app.Diary.remove.clicked()
+app.Diary.ObjectList.select_paths([])
+app.Diary.title.set_text("")
+app.Diary.title.set_text("")
+player.delete_window("Diary")
+
+player.finish()
